# AI-Tools

./: .env.example  .gitignore  ARCHITECTURE.md  BRANDING.md  CONTENTFORGE_GUIDE.md  CRITICAL_FIXES_IMPLEMENTATION.md  DATA_MODELS.md  ELECTRON_MIGRATION.md  ENHANCEMENTS_SUMMARY.md  FEATURES.md  FIXES_APPLIED.md  GENERAL_IMPROVEMENTS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INFINITY_STUDIO.md  INTEGRATION_STRATEGY.md  JOB_APPLICATION_README.md  LOGGING_INTEGRATION_GUIDE.md  PHASE_2_3_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION.md  PHASE_5_IMPLEMENTATION.md  PHASE_6_IMPLEMENTATION.md  PROJECT_COMPLETE.md  QA_TEST_REPORT.md  README.md  SECURITY_COMPLIANCE.md  SETUP.md  SITE_IMPLEMENTATION_GUIDE.md  STARTUP_GUIDE.md  STRATEGIC_RECOMMENDATIONS.md  UI_UX_DESIGN.md  UI_UX_RECOMMENDATIONS.md  database-schema.sql  docker-compose.yml  fix-templates.md  index.html  netlify.toml  next.config.js  (+8 more)
azure-functions/: README.md  local.settings.json  package-lock.json  package.json  tsconfig.json
backend/: .env.example  Dockerfile  main.py  package.json  requirements.txt  tsconfig.json
dist-main/: ipc-handlers.js  ipc-handlers.js.map  main.js  main.js.map  preload.js  preload.js.map
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INTEGRATIONS.md  azure-functions-setup.md
drizzle/: 0000_shallow_blue_marvel.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  animation_engine.rs  audio_engine.rs  color.rs  effects.rs  export.rs  image_engine.rs  lofi_studio.rs  main.rs  motion_graphics.rs  project.rs  utils.rs  video_engine.rs
src-tauri/src/commands/: ai.rs  audio.rs  color.rs  effects.rs  export.rs  image.rs  mod.rs  streaming.rs  utils.rs  video.rs
(+501 files in other folders)
