[package]
name = "photovideo-pro"
version = "1.0.0"
description = "Advanced cross-platform photo and video editing application"
authors = ["PhotoVideo Pro Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all", "path-all", "protocol-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
image = "0.24"
ffmpeg-next = { version = "6.0", optional = true }
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
num_cpus = "1.16"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

# Image processing
imageproc = "0.23"
opencv = { version = "0.88", optional = true }

# Video processing (optional, requires system FFmpeg)
# Uncomment when FFmpeg is available on build system
# ffmpeg-next = "6.0"

# Audio processing
hound = "3.5"
rodio = { version = "0.17", optional = true }

# AI/ML features (optional)
tract-onnx = { version = "0.21", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
gpu-acceleration = []
opencv-support = ["opencv"]
audio-support = ["rodio"]
ai-features = ["tract-onnx"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
